tests/neg/semantic_break_outside.baa
// EXPECT: [Error]
// EXPECT: خطأ دلالي
// EXPECT: 'break' used outside
صحيح الرئيسية() {
    توقف.
    إرجع 0.
}
